--- a/fr.html
+++ b/fr.html
@@ -14,7 +14,7 @@
         <div class="columns">
           <div class="column is-one-fifth">
             <figure class="image image-profile">
-              <img class="is-rounded" src="./images/profile_test_3_b&w.png">
+              <img class="is-rounded" src="./images/0.jpeg">
             </figure>
           </div>
           <div class="column">
@@ -23,7 +23,7 @@
           </div>
           <div class="column is-one-quarter">
             <ul class="details-list">
-              <li>contact[at]jmartin.tf</li>
+              <li>mail[at]jmartin.tf</li>
               <li>31 ans</li>
               <li>Lyon</li>
             </ul>
@@ -50,16 +50,28 @@
             <div class="location">Lyon</div>
             <ul class="work-details-list">
               <li>
-                Réalisation de dashboards et cartes web intéractives basées sur des données issues de différentes sources (ArcGIS Server, fichiers plats, ...). Missions réalisées au sein d'une équipe composée de spécialiste des SIG.
+                Applications web dont l'interface principale est une carte intéractive avec les fonctionnalités suivantes :
+                  <ul class="feature-list">
+                    <li>possibilité de filtrer et d'effectuer des recherches autocomplétées sur les données projetées sur la carte</li>
+                    <li>communication via API REST pour la récupération, l'ajout, la modification ou la suppression des données projetées sur la carte</li>
+                    <li>possibilité d'afficher les données projetées sur la carte sous la forme de tableau (triable et filtrable) et d'effectuer les opérations d'ajout, de modification et de suppression via le tableau</li>
+                    <li>export des données projetées sous forme de fichier tableur</li>
+                    <li>export de la carte sous forme de fichier PNG ou PDF</li>
+                    <li>possibilité de dessiner sur la carte</li>
+                  </ul>
+                  <div class="technologies">OpenLayers, Vue.js</div>
               </li>
               <li>
-                Réalisation d'applications desktop basées sur des photos et vidéos géoréférencées. Missions effectuées pour une société spécialisée dans la topographie et la photogrammétrie.
+                Applications desktop basées sur des vidéos / photos géoréférencées avec écran séparé en deux zones :
+                <ul class="feature-list">
+                  <li>une zone affichage vidéo / photo</li>
+                  <li>une zone affichage de la position de la vidéo / photo projetée sur un fond de carte ou une imagerie satellite
+                </ul>
+                <div class="technologies">OpenLayers, Vue.js, NW.js</div>
               </li>
               <li>
-                Réalisation d'observatoire sous forme de carte intéractive en ligne multi-fonctionnalités (filtrage, sélection, dessin, export PNG/PDF, ...). Mission effectuée pour un centre d'étude de la conjoncture immobilière.
-              </li>
-              <li>
-                Réalisation de carte web intéractive projettant des données issues d'OpenStreetMap, Mapillary et FLickr. Mission réalisée dans le cadre du projet Nomad Maps.
+                Application web basée sur une carte contenant des données mises à jour automatiquement toutes les heures.
+                <div class="technologies">OpenLayers, Vue.js, Node.js, MongoDB / Mongoose </div>
               </li>
             </ul>
           </div>
@@ -73,13 +85,16 @@
             <div class="location">Araxxe, Lyon</div>
             <ul class="work-details-list">
               <li>
-                Conception et réalisation de l'intégration d'une technologie de robots générateurs d'appels téléphoniques dans une architecture logicielle préexistante
+                Intégration d'une technologie de robots générateurs d'appels téléphoniques dans une architecture logicielle préexistante
+                <div class="technologies">Java, SQL Server</div>
               </li>
               <li>
-                Conception et réalisation d'une carte intéractive permettant de visualiser un parc mondial de robots générateurs d'appels téléphoniques
+                Carte intéractive permettant de visualiser un parc mondial de robots générateurs d'appels téléphoniques
+                <div class="technologies">Leaflet, SQL Server</div>
               </li>
               <li>
-                Conception et rédaction de script de web scrapping
+                Rédaction de script de web scrapping
+                <div class="technologies">Java, Selenium WebDriver</div>
               </li>
             </ul>
           </div>
@@ -123,9 +138,10 @@
             <h3>Générales</h3>
             <ul class="skill-list">
               <li>HTML5 / CSS3</li>
-              <li>Javascript (es6)</li>
-              <li>Java</li>
+              <li>Javascript</li>
               <li>Node JS</li>
+              <li>MongoDB / Mongoose</li>
+              <li>Java</li>
               <li>SQL</li>
             </ul>
             <h3>Frameworks Javascript</h3>
