--- a/en.html
+++ b/en.html
@@ -123,7 +123,7 @@
             <h3>General</h3>
             <ul class="skill-list">
               <li>HTML5 / CSS3</li>
-              <li>Javascript (es6)</li>
+              <li>Javascript</li>
               <li>Java</li>
               <li>Node JS</li>
               <li>SQL</li>
